<resources>
    <string name="app_name">GuedrMaster</string>
    <string name="max_temp_label">Temperatura máxima: %.2f </string>
    <string name="min_temp_label">Temperatura mínima: %.2f </string>
    <string name="humidity_label">Humedad: %.2f</string>
    <string name="forecast_description_example">Soleado con nubes</string>
    <string name="forecast_image">forecast_image</string>
    <string name="settings">Ajustes</string>
    <string name="updated_preferences">Preferencias actualizadas</string>
    <string name="undo">Deshacer</string>
    <string name="city_example">Madrid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Anterior</string>
    <string name="next">siguiente</string>
    <string name="transition_to_detail">transitionToDetail</string>
</resources>
