<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="devspain.io.guedrmaster.activity.DetailActivity">

    <include layout="@layout/toolbar_main"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:transitionName="@string/transition_to_detail">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/forecast_image"
                android:layout_toRightOf="@+id/forecast_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/max_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp_label"/>

                <TextView
                    android:id="@+id/min_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp_label"/>

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_label"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/forecast_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/sun_cloud"/>

            <TextView
                android:id="@+id/forecast_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forecast_image"
                android:text="@string/forecast_description_example"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
